--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						</header>
 						<div class="content">
 							<h3>When is it 	being held?</h3>
-							<p>Friday, September 30th (Early evening) &mdash; Sunday, October 2nd (Afternoon).</p>
+							<p>Thursday, September 15th (Early evening) &mdash; Sunday, September 18th (Afternoon).</p>
 
 							<h3>Where?</h3>
 							<p><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in Orford, Quebec, Canada (about 90 minutes outside Montreal).</p>
