Gallery images, some other stuff

--- a/index.html
+++ b/index.html
@@ -21,31 +21,18 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Polaris Game Design Retreat</h1>
-							<p>A weekend retreat for Game Design professionals.</p>
+							<span class="image main"><img src="images/polarisLogo/polaris_vertical_logo_3color_dark@4x.png" alt="Polaris Game Design Retreat" /></span>
+							<h3>A yearly weekend retreat for game design professionals</h3>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/mika-baumeister-HUyICL8qbEE-unsplash.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/nick-kavounidis-ByjSBS0SPMc-unsplash.jpg" alt="" /></span>
 						</div>
 					</section>
 
-					<!-- Section -->
-					<!--
-					<section id="first">
-						<header>
-							<h2>Mission Statement</h2>
-						</header>
-						<div class="content">
-							<span class="image main"><img src="images/brett-jordan-pNpECBK_kUE-unsplash.jpg" alt="Design, spelled out with Scrabble tiles" /></span>
-							<p>We collaborate courageously with the top minds in the game industry to positively influence and lead the art, science, and business of game design.</p>
-						</div>
-					</section>
-					-->
-
-					<!-- Section -->
+				<!-- What is Polaris -->
 					<section id="first">
 						<header>
 							<h2>What is Polaris?</h2>
@@ -63,6 +50,8 @@
 							
 							<p>Polaris combines effective, proven workgroup techniques with the beauty of the Quebec countryside for a unique career opportunity.</p>
 
+							<span class="image main"><img src="images/tumblr_8c340076341f4b48b30b4703b0503e91_05db634e_640.gif" alt="" /></span>
+
 							<h2>FAQ</h2>
 
 							<h3>What do you do?</h3>
@@ -78,7 +67,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Polaris 2022 -->
 					<section>
 						<header>
 							<h2>Details of Polaris 2022</h2>
@@ -91,29 +80,30 @@
 							<p><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in Orford, Quebec, Canada (about 90 minutes outside Montreal).</p>
 
 							<h3>How much does it cost?</h3>
-							<p>~$1,000 CAD, all-inclusive (slightly less for a shared double room).</p>
+							<p>~$1,000 CAD, all-inclusive (slightly less for a shared double room) (final cost TBD).</p>
 
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Keynote -->
 				<section>
 					<header>
 						<h3>Keynote Speaker</h3>
 					</header>
 					<div class="content">
 						<p>Our Keynote Speaker for Polaris 2022 is <strong>Lauren Scott</strong>!</p>
-						<p>Aside from being an excellent human being, Lauren was the economy designer on <em>Psychonauts 2</em>, and she will share her thoughts on a relevant topic on the first night, to inspire us and get us in the mood to discuss game design!</p>
+						<p>Aside from being an excellent human being, Lauren was the economy designer on Double Fine's <em>Psychonauts&nbsp;2</em>. She will share her thoughts on a relevant topic on the first night, to inspire us and get us in the mood to discuss game design!</p>
 						<p>More details to follow.</p>
 					</div>
 				</section>
-				<!-- Section -->
+
+				<!-- Location -->
 				<section>
 					<header>
 						<h3>Location Details</h3>
 					</header>
 					<div class="content">
-						<p><strong>Polaris 2022</strong> will take place at the beautiful <strong><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a></strong> in <a href="https://g.page/ManoirDesSables?share">Orford, Quebec, Canada</a>.</p>
+						<p><strong>Polaris 2022</strong> will take place at the <strong><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a></strong> in beautiful <a href="https://g.page/ManoirDesSables?share">Orford, Quebec, Canada</a>.</p>
 						<ul class="feature-icons">
 							<li class="icon solid fa-utensils">All meals provided</li>
 							<li class="icon solid fa-spa">Outdoor spa and cold bath</li>
@@ -122,7 +112,12 @@
 							<li class="icon solid fa-comments">Meeting and breakout rooms</li>
 							<li class="icon solid fa-glass-cheers">Indoor and outdoor social spaces</li>
 						</ul>
-						<span class="image main"><img src="images/download_MDS-Arriere-e╠ute╠u-2048x858.jpg" alt="" /></span>
+						<div class="gallery">
+							<a href="images/download_MDS-Arriere-e╠ute╠u-2048x858.jpg" class="landscape"><img src="images/download_MDS-Arriere-e╠ute╠u-2048x858.jpg" alt="" /></a>
+							<!--<a href="images/Corporatif-1-min.jpg" class="portrait"><img src="images/Corporatif-1-min.jpg" alt="" /></a>-->
+							<a href="images/Spa_HR3-min-scaled.jpg" class="portrait"><img src="images/Spa_HR3-min-scaled.jpg" alt="" /></a>
+							<a href="images/Salle-a-manger.jpg" class="portrait"><img src="images/Salle-a-manger.jpg" alt="" /></a>
+						</div>
 					</div>
 				</section>
 
@@ -496,6 +491,14 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						</footer>
 					</section>
 
+				<!--
+					<section>
+						<div class="content">
+							<span class="image main"><img src="images/mika-baumeister-HUyICL8qbEE-unsplash.jpg" alt="Mario" /></span>
+						</div>
+					</section>
+				-->
+			
 				<!-- Copyright -->
 					<div class="copyright">&copy; 2022 Polaris Game Design Retreat. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
