Update splash image and some corrections

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/nick-kavounidis-ByjSBS0SPMc-unsplash.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/alexis-brown-omeaHbEFlN4-unsplash.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -63,7 +63,11 @@
 							<p>We apologize, but to protect this desired atmosphere, +1s and guests are not allowed. All accommodations are reserved for attendees <strong>only</strong>. Please let us know if you have any questions, and/or you wish for us to suggest a roommate from our invitee list.</p>
 
 							<h3>What are your event policies?</h3>
-							<p>You can find our detailed event policies, including our Code of Conduct and Returns Policy, by <a href="#">clicking here.</a></p>
+							<p>You can click the following links to read our full policies, including our Code of Conduct, Returns Policy and Covid-19 Policy.</p>
+
+							<h3>What are you doing about Covid-19?</h3>
+							<p>We take Covid precautions very seriously. All invitees are required to provide a negativ COvid test prior to attendance, and additional Rapid Tests will be provided during the event.</p>
+							<p>For more details please see our full Covid-19 Policy.</p>
 						</div>
 					</section>
 
@@ -80,7 +84,7 @@
 							<p><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in Orford, Quebec, Canada (about 90 minutes outside Montreal).</p>
 
 							<h3>How much does it cost?</h3>
-							<p>~$1,000 CAD, all-inclusive (slightly less for a shared double room) (final cost TBD).</p>
+							<p>$1,400 CAD, inclusive of event, accomodation and food.</p>
 
 						</div>
 					</section>
@@ -103,7 +107,7 @@
 						<h3>Location Details</h3>
 					</header>
 					<div class="content">
-						<p><strong>Polaris 2022</strong> will take place at the <strong><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a></strong> in beautiful <a href="https://g.page/ManoirDesSables?share">Orford, Quebec, Canada</a>.</p>
+						<p><strong>Polaris 2022</strong> will take place at the <a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in beautiful <a href="https://g.page/ManoirDesSables?share">Orford, Quebec, Canada</a>.</p>
 						<ul class="feature-icons">
 							<li class="icon solid fa-utensils">All meals provided</li>
 							<li class="icon solid fa-spa">Outdoor spa and cold bath</li>
@@ -127,11 +131,7 @@
 							<h2>Ticket Payments</h2>
 						</header>
 						<div class="content">
-							<p><strong>Polaris</strong> accepts payment via Square Payments at the link below.</p>
-							<ul class="actions">
-								<li><a href="#" class="button large">Single Room</a></li>
-								<li><a href="#" class="button large">Double Room, Shared</a></li>
-							</ul>
+							<p><strong>Polaris</strong> accepts ticket payments via Eventbrite private invitations. If you are invited you will receive your private link via email upon confirmation.</p>
 						</div>
 					</section>
 
@@ -144,8 +144,8 @@
 						<div class="content">
 							<p><strong>Polaris</strong> is administered by <em>Project Horseshoe</em> alumni (and friends) who want to bring the magic back.</p>
 							<ul class="alt">
-								<li>Tanya Short, Kitfox Games</li>
-								<li>Dan Cook, Spry Fox</li>
+								<li>Tanya X. Short, Kitfox Games</li>
+								<li>Daniel Cook, Spry Fox</li>
 								<li>Osama Dorias, Unity Technologies</li>
 								<li>May Ling Tan, Bungie</li>
 								<li>Graeme Lennon, KO-OP</li>
