--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
 							<p>You can click the following links to read our full policies, including our Code of Conduct, Returns Policy and Covid-19 Policy.</p>
 
 							<h3>What are you doing about Covid-19?</h3>
-							<p>We take Covid precautions very seriously. All invitees are required to provide a negativ COvid test prior to attendance, and additional Rapid Tests will be provided during the event.</p>
+							<p>We take Covid precautions very seriously. All invitees are required to provide a negative Covid test prior to attendance, and additional Rapid Tests will be provided during the event.</p>
 							<p>For more details please see our full Covid-19 Policy.</p>
+
+							<h3>How do I pay?</h3>
+							<p><strong>Polaris</strong> handles ticket payments via Eventbrite. If you are invited you will receive your private link via email upon confirmation.</p>
 						</div>
 					</section>
 
@@ -124,17 +127,6 @@
 						</div>
 					</div>
 				</section>
-
-				<!-- Payment -->
-					<section>
-						<header>
-							<h2>Ticket Payments</h2>
-						</header>
-						<div class="content">
-							<p><strong>Polaris</strong> accepts ticket payments via Eventbrite private invitations. If you are invited you will receive your private link via email upon confirmation.</p>
-						</div>
-					</section>
-
 
 				<!-- About Us -->
 					<section>
