Fix some more typos and clarify section divisions

--- a/index.html
+++ b/index.html
@@ -57,20 +57,25 @@
 							<h3>What do you do?</h3>
 							<p>You will choose a topic of game design that keenly interests you and a few other attendees. You will work on this problem together, collaboratively, and prepare a presentation to share your findings with the other Polaris attendees.</p>
 							<p>If your group feels they have discovered something worth sharing with the broader world, you may choose to prepare a	Polaris report together, to last the ages. For an example of past similar reports, as inspiration for the kinds of topics and discoveries this "think-tank"	approach might reveal, browse the <a href="https://www.projecthorseshoe.com/reports/"><em>Project Horseshoe</em> report archive.</a></p>
+							<hr />
 							
 							<h3>Who can attend?</h3>
 							<p><strong>Polaris is invite-only.</strong> Our selection committee has carefully chosen each and every invitation for their contribution to the field of game design, personal fit in the desired culture of kindness, and overall diversity of perspectives in the group.</p>
 							<p>We apologize, but to protect this desired atmosphere, +1s and guests are not allowed. All accommodations are reserved for attendees <strong>only</strong>. Please let us know if you have any questions, and/or you wish for us to suggest a roommate from our invitee list.</p>
+							<hr />
 
 							<h3>What are your event policies?</h3>
 							<p>You can click the following links to read our full policies, including our Code of Conduct, Returns Policy and Covid-19 Policy.</p>
+							<hr />
 
 							<h3>What are you doing about Covid-19?</h3>
 							<p>We take Covid precautions very seriously. All invitees are required to provide a negative Covid test prior to attendance, and additional Rapid Tests will be provided during the event.</p>
 							<p>For more details please see our full Covid-19 Policy.</p>
+							<hr />
 
 							<h3>How do I pay?</h3>
 							<p><strong>Polaris</strong> handles ticket payments via Eventbrite. If you are invited you will receive your private link via email upon confirmation.</p>
+							<hr />
 						</div>
 					</section>
 
@@ -78,13 +83,14 @@
 					<section>
 						<header>
 							<h2>Details of Polaris 2022</h2>
+							<p>Join us for our Polaris 1, our inaugural event!</p>
 						</header>
 						<div class="content">
 							<h3>When is it 	being held?</h3>
 							<p>Thursday, September 15th (Early evening) &mdash; Saturday, September 17th (Afternoon).</p>
 
 							<h3>Where?</h3>
-							<p><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in Orford, Quebec, Canada (about 90 minutes outside Montreal).</p>
+							<p><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in Orford, Qu&eacute;bec, Canada (about 90 minutes outside Montr&eacute;al).</p>
 
 							<h3>How much does it cost?</h3>
 							<p>$1,400 CAD, inclusive of event, accomodation and food.</p>
@@ -110,7 +116,7 @@
 						<h3>Location Details</h3>
 					</header>
 					<div class="content">
-						<p><strong>Polaris 2022</strong> will take place at the <a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in beautiful <a href="https://g.page/ManoirDesSables?share">Orford, Quebec, Canada</a>.</p>
+						<p><strong>Polaris 2022</strong> will take place at the <a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in beautiful <a href="https://g.page/ManoirDesSables?share">Orford, Qu&eacute;bec, Canada</a>.</p>
 						<ul class="feature-icons">
 							<li class="icon solid fa-utensils">All meals provided</li>
 							<li class="icon solid fa-spa">Outdoor spa and cold bath</li>
@@ -140,7 +146,7 @@
 								<li>Daniel Cook, Spry Fox</li>
 								<li>Osama Dorias, Unity Technologies</li>
 								<li>May Ling Tan, Bungie</li>
-								<li>Graeme Lennon, KO-OP</li>
+								<li>Graeme Lennon, KO_OP</li>
 							</ul>
 						</div>
 						<footer>
