Update keynote talk

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class="content">
 						<p>Our Keynote Speaker for Polaris 2022 is <strong>Lauren Scott</strong>!</p>
 						<p>Aside from being an excellent human being, Lauren was the economy designer on Double Fine's <em>Psychonauts&nbsp;2</em>. She will share her thoughts on a relevant topic on the first night, to inspire us and get us in the mood to discuss game design!</p>
-						<p>More details to follow.</p>
+						<p>Lauren's talk will explore those <em>oh shit</em> moments in game design, when you've built your system and then discovered that it doesn't work as expected.</p>
 					</div>
 				</section>
 
