--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 							<hr />
 
 							<h3>What are your event policies?</h3>
-							<p>You can click the following links to read our full policies, including our Code of Conduct, Returns Policy and Covid-19 Policy.</p>
+							<p>You can click the following links to read our full policies, including our <a href="https://indecisive-suggestion-d54.notion.site/Code-of-Conduct-1be5acd44a54417f98a64810ca7ed9a9" title="Code of Conduct">Code of Conduct</a>, <a href="https://indecisive-suggestion-d54.notion.site/Returns-Policy-e6c6f7d3a835458c9fcab290bd839a80" title="Returns Policy">Returns Policy</a> and <a href="https://indecisive-suggestion-d54.notion.site/Covid-19-Policy-96eba3d5e2dc4492951bb7a9d48c6983" title="Covid-19 Policy">Covid-19 Policy</a>.</p>
 							<hr />
 
 							<h3>What are you doing about Covid-19?</h3>
 							<p>We take Covid precautions very seriously. All invitees are required to provide a negative Covid test prior to attendance, and additional Rapid Tests will be provided during the event.</p>
-							<p>For more details please see our full Covid-19 Policy.</p>
+							<p>For more details please see our full <a href="https://indecisive-suggestion-d54.notion.site/Covid-19-Policy-96eba3d5e2dc4492951bb7a9d48c6983" title="Covid-19 Policy">Covid-19 Policy</a>.</p>
 							<hr />
 
 							<h3>How do I pay?</h3>
@@ -92,7 +92,7 @@
 							<p><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in Orford, Qu&eacute;bec, Canada (about 90 minutes outside Montr&eacute;al).</p>
 
 							<h3>How much does it cost?</h3>
-							<p>$1,400 CAD, inclusive of event, accomodation and food.</p>
+							<p>$1,400 CAD for a private room, inclusive of event, accomodation and food. Discounted tickets are available for shared rooms.</p>
 
 						</div>
 					</section>
