--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<p><a href="https://manoirdessables.com/?lang=en">Manoir des Sables</a> in Orford, Qu&eacute;bec, Canada (about 90 minutes outside Montr&eacute;al).</p>
 
 							<h3>How much does it cost?</h3>
-							<p>$1,400 CAD for a private room, inclusive of event, accomodation and food. Discounted tickets are available for shared rooms.</p>
+							<p>$1,400 CAD for a private room, inclusive of event, accommodation and food. Discounted tickets are available for shared rooms.</p>
 
 						</div>
 					</section>
