Update Osama's studio

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							<ul class="alt">
 								<li>Tanya X. Short, Kitfox Games</li>
 								<li>Daniel Cook, Spry Fox</li>
-								<li>Osama Dorias, Unity Technologies</li>
+								<li>Osama Dorias, Blizzard</li>
 								<li>May Ling Tan, Bungie</li>
 								<li>Graeme Lennon, KO_OP</li>
 							</ul>
