--- a/index.html
+++ b/index.html
@@ -100,9 +100,27 @@
 
 							<h3>How much does it cost?</h3>
 							<p>$1,400 CAD for a private room, inclusive of event, accommodation and food. Discounted tickets are available for shared rooms.</p>
-
 						</div>
 					</section>
+
+				<!-- Sponsors -->
+				<section>
+					<header>
+						<h3>Sponsors</h3>
+					</header>
+					<div class="content">
+						<p>Polaris 2022 is sponsored by <a href="https://www.hiddenpath.com/"
+								title="Hidden Path Entertainment"><strong>Hidden Path Entertainment</a></strong> and <a
+								href="https://spryfox.com/" title="Spry Fox"><strong>Spry Fox</strong></a>.
+							From the entire coordinating team and all attendants, thank you to our sponsors!</p>
+						<ul class="feature-icons">
+							<li><a href="https://www.hiddenpath.com/" title="Hidden Path Entertainment" style="border-bottom: 0;"><img
+										src="images/hiddenpathlogo.png" alt="Hidden Path Entertainment" /></a></li>
+							<li><a href="https://spryfox.com/" title="Spry Fox" style="border-bottom: 0;"><img
+										src="images/spryfoxlogo.png" alt="Spry Fox" /></a></li>
+						</ul>
+					</div>
+				</section>
 
 				<!-- Keynote -->
 				<section>
@@ -111,8 +129,11 @@
 					</header>
 					<div class="content">
 						<p>Our Keynote Speaker for Polaris 2022 is <strong>Lauren Scott</strong>!</p>
-						<p>Aside from being an excellent human being, Lauren was the economy designer on Double Fine's <em>Psychonauts&nbsp;2</em>. She will share her thoughts on a relevant topic on the first night, to inspire us and get us in the mood to discuss game design!</p>
-						<p>Lauren's talk will explore those <em>oh shit</em> moments in game design, when you've built your system and then discovered that it doesn't work as expected.</p>
+						<p>Aside from being an excellent human being, Lauren was the economy designer on Double Fine's
+							<em>Psychonauts&nbsp;2</em>. She will share her thoughts on a relevant topic on the first night, to inspire
+							us and get us in the mood to discuss game design!</p>
+						<p>Lauren's talk will explore those <em>oh shit</em> moments in game design, when you've built your system and
+							then discovered that it doesn't work as expected.</p>
 					</div>
 				</section>
 
